Admin orders page (#60)
* feat(admin): add order listing route

* feat(dto): add AdminOrdersResponse structure

* feat(order): implement AdminListOrders for admin order listing with pagination and stats

* feat(docs): add Swagger documentation for admin order listing

* feat(admin): add route for AdminOrders page with protected access

* feat(dto): add AdminOrderItem, PaginationMeta, StatsMeta, and AdminOrdersResponse interfaces

* feat(layout): integrate AdminLayout into AddProduct and EditProduct pages

* feat(component):  move AdminProductCard

* feat(admin): implement getAdminOrders service function

* feat(admin): enhance AdminDashboard and AdminProducts with AdminLayout integration and improve error handling in API service

* feat(admin): add FiltersBar, OrdersTable, PaginationControls components and useAdminOrders hook for order management
